# loguru_wrapper

./: .activate  .created.yml  .gitignore  .init_workspace  CHANGELOG.md  README.md  dev-requirements.txt  loguru_wrapper.code-workspace  pyproject.toml  requirements.txt  todo.txt
src/loguru_wrapper/: __init__.py  logger_config.py  logger_wrapper.py  loguru_wrapper.py
tests/: shared_test_methods.py  test_logger_wrapper.py  test_loguru_wrapper.py
