[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loguru_wrapper"
authors = [{ name = "Joni Töyrylä", email = "info@jonitoyryla.eu" }]
version = "0.1.1"
description = ""
requires-python = ">=3.10"
dependencies = ["loguru>=0.7.3", "stackwalker>=0.4.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# Set true if want to include package data
# include-package-data = true
include-package-data = false

[tool.setuptools.package-data]
# Data folders included in the package
# Example: loguru_wrapper = ["data/**/*", ".gim/**/*"]
loguru_wrapper = []

[project.scripts]
# Script to run the application
# Example: loguru_wrapper = "loguru_wrapper.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
style = [
    [
        "qmark",
        "fg:#ff9d00 bold",
    ],
    [
        "question",
        "bold",
    ],
    [
        "answer",
        "fg:#ff9d00 bold",
    ],
    [
        "pointer",
        "fg:#ff9d00 bold",
    ],
    [
        "highlighted",
        "fg:#ff9d00 bold",
    ],
    [
        "selected",
        "fg:#cc5454",
    ],
    [
        "separator",
        "fg:#cc5454",
    ],
    [
        "instruction",
        "",
    ],
    [
        "text",
        "",
    ],
    [
        "disabled",
        "fg:#858585 italic",
    ],
]
